# jobs

./: .gitignore  .vercelignore  CONTRIBUTING.md  HANDOVER.md  README.md  build_occupations.py  build_real_data.py  build_site_data.py  data.json  diagnose_eurostat.py  eurostat.py  generate_data.py  jobs_bls_karpathy.ipynb  make_csv.py  make_cy_csv.py  make_prompt.py  occupations.json  occupations_cy.json  parse_detail.py  parse_occupations.py  process.py  prompt.md  pyproject.toml  score.py  scores.json  scores_advantage.json  scores_growth.json  scrape.py  vercel.json
.github/workflows/: ci.yml  deploy-brazil.yml  pages.yml  static.yml
brazil/: PLAN.md  analise_demografica.py  build_site_data_br.py  insight_templates.py  insight_templates_batch_a.py  insight_templates_batch_b1.py  insight_templates_batch_b2.py  insight_templates_batch_c1.py  insight_templates_batch_c2.py  insight_templates_batch_d1.py  insight_templates_batch_d2.py  insight_templates_batch_women.py  make_csv_br.py  occupations_br.csv  score_br.py  scrape_caged.py  scrape_cbo.py  scrape_rais.py  validate_cbo.py
brazil/data/: .gitignore  caged_stats.json  rais_demographics.json
brazil/pages/: 0101-oficiais-generais-das-forcas-armadas.md  0102-oficiais-das-forcas-armadas.md  0103-pracas-das-forcas-armadas.md  1111-legisladores.md  (+622 more)
site/: data.json  index.html
spec/: modelo_dados.tsv  notas.tsv  plano_tecnico.tsv  prescritivo.tsv  roadmap.tsv  scoring_llm.tsv  visao.tsv  visualizacoes.tsv
tests/: test_build_site_data.py  test_make_csv.py  test_make_prompt.py  test_parse_detail.py  test_score.py
(+18 files in other folders)
